Add light/dark theme toggle with improved styles
Introduces a theme toggle button in the header, allowing users to switch between light and dark modes. Implements theme persistence using localStorage and updates the UI dynamically. Enhances style.css with CSS variables for both themes, improves component styling, and updates script.js to handle theme logic and icon updates.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 <body>
     <div class="container">
         <header>
-            <h1>💰 POE2 Party Helper</h1>
-            <p>ระบบจัดการปาร์ตี้สำหรับ POE2 - คำนวณรายได้ | จัดการไอเท็ม | บันทึกหลักฐาน</p>
+            <div class="header-content">
+                <div class="header-text">
+                    <h1>💰 POE2 Party Helper</h1>
+                    <p>ระบบจัดการปาร์ตี้สำหรับ POE2 - คำนวณรายได้ | จัดการไอเท็ม | บันทึกหลักฐาน</p>
+                </div>
+                <button id="theme-toggle" class="theme-toggle" title="Switch theme">
+                    <span class="theme-icon">🌙</span>
+                </button>
+            </div>
         </header>
 
         <!-- Navigation Menu -->
